# triptribe_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e44be7044149_user_places_placecomments_table.py
app/core/: config.py  logger.py  logging.conf
app/models/: index.py  place.py  place_comment.py  place_comments.py  user.py
app/repositories/: user_repository.py
app/schemas/: place.py  place_comment.py  user.py
app/services/: user_service.py
